--- a/index.css
+++ b/index.css
@@ -1,7 +1,10 @@
 #Ntime_div {
+  margin-top: 24px;
+  margin-bottom: 24px;
+  margin-left: auto;
+  margin-right: auto;
   width: 400px;
   border: 2px solid #a2a2a2;
-  margin: auto;
   text-align: center;
 }
 
@@ -27,6 +30,11 @@
 transform: translate(-50%, -10%);
 }
 
+#new_Ntime_div {
+  background-color: #fff;
+  width: 100%;
+  padding: 24px;
+}
 
 #Ntime_bottom_div {
   display: flex;
@@ -49,6 +57,7 @@ transform: translate(-50%, -10%);
 
 #Ntime_div_right {
   font-size: 10px;
+  width: 150px;
 }
 #Ntime_div_right canvas {
   padding-top: 5px;
